@@ -2,14 +2,6 @@
 import builder,os
 from catalyst_support import *
 
-__subarch_map = {
-	"hppa":		arch_hppa,
-	"hppa1.1":	arch_hppa1_1,
-	"hppa2.0":	arch_hppa2_0
-}
-
-__machine_map = ("parisc","parisc64","hppa","hppa64")
-
 class generic_hppa(builder.generic):
 	"Abstract base class for all hppa builders"
 	def __init__(self,myspec):
@@ -38,3 +30,12 @@ class arch_hppa2_0(generic_hppa):
 		generic_hppa.__init__(self,myspec)
 		self.settings["CFLAGS"]+=" -march=2.0"
 		self.settings["CHOST"]="hppa2.0-unknown-linux-gnu"
+
+__subarch_map = {
+	"hppa":		arch_hppa,
+	"hppa1.1":	arch_hppa1_1,
+	"hppa2.0":	arch_hppa2_0
+}
+
+__machine_map = ("parisc","parisc64","hppa","hppa64")
+
