@@ -9,6 +9,7 @@ from catalyst_support import *
 from generic_target import *
 from stat import *
 import catalyst_lock
+import catalyst.arch
 
 class generic_stage_target(generic_target):
 
@@ -51,35 +52,14 @@ class generic_stage_target(generic_target):
 		self.archmap = {}
 		self.subarchmap = {}
 		machinemap = {}
-		for x in [x[:-3] for x in os.listdir(self.settings["sharedir"]+\
-			"/arch/") if x.endswith(".py")]:
-			try:
-				fh=open(self.settings["sharedir"]+"/arch/"+x+".py")
-				"""
-				This next line loads the plugin as a module and assigns it to
-				archmap[x]
-				"""
-				self.archmap[x]=imp.load_module(x,fh,"arch/"+x+\
-					".py",(".py","r",imp.PY_SOURCE))
-				"""
-				This next line registers all the subarches supported in the
-				plugin
-				"""
-				tmpsubarchmap, tmpmachinemap = self.archmap[x].register()
-				self.subarchmap.update(tmpsubarchmap)
-				for machine in tmpmachinemap:
-					machinemap[machine] = x
-				for subarch in tmpsubarchmap:
-					machinemap[subarch] = x
-				fh.close()
-			except IOError:
-				"""
-				This message should probably change a bit, since everything in
-				the dir should load just fine. If it doesn't, it's probably a
-				syntax error in the module
-				"""
-				msg("Can't find/load "+x+".py plugin in "+\
-					self.settings["sharedir"]+"/arch/")
+		arches = catalyst.arch.arches()
+		for x in arches.get_arches():
+			tmpsubarchmap, tmpmachinemap = self.archmap[x].register()
+			self.subarchmap.update(x.__subarch_map)
+			for machine in x.__machine_map:
+				machinemap[machine] = x
+			for subarch in x.__subarch_map:
+				machinemap[subarch] = x
 
 		if self.settings.has_key("chost"):
 			hostmachine = self.settings["chost"].split("-")[0]
